gccida/g1/predict_edge_def
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.c:615:33: error: must use 'enum' tag to refer to type 'br_predictor'
void  predict_edge_def( edge e, br_predictor predictor, prediction taken) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.c:615:57: error: must use 'enum' tag to refer to type 'prediction'
void  predict_edge_def( edge e, br_predictor predictor, prediction taken) 
                                                        ^
                                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.c:619:11: error: use of undeclared identifier 'predictor_info_0'; did you mean 'predictor_info'?
hitrate = predictor_info_0[predictor].hitrate; 
          ^~~~~~~~~~~~~~~~
          predictor_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.c:86:36: note: 'predictor_info' declared here
static const struct predictor_info predictor_info[]= {
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.c:620:15: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
if ( taken != TAKEN_0 ) 
              ^~~~~~~
              TAKEN
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/predict_edge_def/src/obj/predict.o] Error 1
